[gd_scene load_steps=9 format=2]

[ext_resource path="res://Fonts/NameOfTheGame_DynF.tres" type="DynamicFont" id=1]
[ext_resource path="res://UI/Anim_FadebtwScenes.tres" type="Animation" id=2]
[ext_resource path="res://Fonts/TitleScreenBFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://Fonts/Version_dynFont.tres" type="DynamicFont" id=4]
[ext_resource path="res://UI/Title Screen.gd" type="Script" id=5]
[ext_resource path="res://background/FON MAIN ICRAN 1.png" type="Texture" id=6]
[ext_resource path="res://Light Textures/light.png" type="Texture" id=7]
[ext_resource path="res://UI/Theme_TitleScreen_Button.tres" type="Theme" id=8]

[node name="Title Screen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
rect_min_size = Vector2( 1920, 1080 )
texture = ExtResource( 6 )
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuC" type="VBoxContainer" parent="."]
anchor_left = 0.1
anchor_top = 0.037037
anchor_right = 0.9
anchor_bottom = 0.903704
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="MenuC"]
margin_right = 1536.0
margin_bottom = 117.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 1, 0.682353, 0.133333, 1 )
text = "The name of the game"
align = 1

[node name="MarginC1" type="MarginContainer" parent="MenuC"]
margin_top = 121.0
margin_right = 1536.0
margin_bottom = 821.0
rect_min_size = Vector2( 450, 700 )
size_flags_vertical = 8

[node name="ColorRect" type="ColorRect" parent="MenuC/MarginC1"]
margin_left = 568.0
margin_top = 450.0
margin_right = 968.0
margin_bottom = 700.0
rect_min_size = Vector2( 400, 250 )
size_flags_horizontal = 4
size_flags_vertical = 8
color = Color( 0.109804, 0.101961, 0.117647, 0 )

[node name="ButtonsC" type="VBoxContainer" parent="MenuC/MarginC1/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 55
__meta__ = {
"_edit_use_anchors_": true
}

[node name="StartNewGameB" type="Button" parent="MenuC/MarginC1/ColorRect/ButtonsC"]
margin_right = 400.0
margin_bottom = 75.0
rect_min_size = Vector2( 350, 75 )
theme = ExtResource( 8 )
text = "New Game"

[node name="LevelsB" type="Button" parent="MenuC/MarginC1/ColorRect/ButtonsC"]
margin_top = 130.0
margin_right = 400.0
margin_bottom = 200.0
rect_min_size = Vector2( 50, 70 )
theme = ExtResource( 8 )
text = "Levels"

[node name="OptionsB" type="Button" parent="MenuC/MarginC1/ColorRect/ButtonsC"]
visible = false
margin_top = 265.0
margin_right = 400.0
margin_bottom = 335.0
rect_min_size = Vector2( 50, 70 )

[node name="Label" type="Label" parent="MenuC/MarginC1/ColorRect/ButtonsC/OptionsB"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 3 )
text = "Options"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Version" type="Label" parent="MenuC"]
margin_top = 825.0
margin_right = 1536.0
margin_bottom = 852.0
custom_fonts/font = ExtResource( 4 )
text = "Version NOT even Pre-Alpha 10/07/2021"

[node name="Fade" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Fade"]
anims/Anim_FadebtwScenes = ExtResource( 2 )

[node name="Lights" type="Node2D" parent="."]

[node name="Light2D" type="Light2D" parent="Lights"]
position = Vector2( 419.465, 520.468 )
texture = ExtResource( 7 )
texture_scale = 0.3
color = Color( 1, 0.0784314, 0.0784314, 1 )

[node name="Light2D3" type="Light2D" parent="Lights"]
position = Vector2( 1499.76, 468.885 )
texture = ExtResource( 7 )
texture_scale = 0.3
color = Color( 1, 0.0784314, 0.0784314, 1 )

[connection signal="pressed" from="MenuC/MarginC1/ColorRect/ButtonsC/StartNewGameB" to="." method="_on_StartNewGameB_pressed"]
[connection signal="pressed" from="MenuC/MarginC1/ColorRect/ButtonsC/LevelsB" to="." method="_on_ContinueB_pressed"]
[connection signal="pressed" from="MenuC/MarginC1/ColorRect/ButtonsC/OptionsB" to="." method="_on_OptionsB_pressed"]
[connection signal="animation_finished" from="Fade/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
